//////------- v1.1
- Добавлены картинки локаций.
- Добавлена награда в виде фруктов за зачистку локаций.
- Упрощено обучение и прохождение первой локации.
- Исправления и доработки.

//////------- v1.2
- Добавлены ежедневные награды за вход в игру (раздел 'События').
- Добавлены награды за приглашение друзей в игру (доступно в 'Событиях' после прохождения 'Тёмного леса').
- Добавлена возможность изменять аватарку персонажа.
- Снижена стоимость Премиума в магазине.
- Улучшена система уведомлений.
- Реализован функционал для рассылки новостей (игроки узнают об обновлениях без входа в игру).
- Исправления и доработки.

//////------- v1.2.1
- Кнопки от предыдущих сообщений бота больше не удаляются, а просто перестают работать (сделано в целях повышения технической стабильности).
- Исправлен редкий баг, когда бот мог отреагировать на ваше сообщение как на сообщение от другого игрока.