@@ -2,6 +2,7 @@
 	"maintenance_message" : "<b>Технические работы</b>\n\nПроводятся технические работы. Пожалуйста, попробуйте возобновить игру позже...",
 	"restart_button" : "Возобновить игру",
 	"invalid_query_answer" : "Кнопка недоступна: это сообщение устарело...",
+	"handle_update_timeout_error" : "Произошла ошибка при попытке обработать ваш запрос. Отправьте любое сообщение и игра будет перезапущена. Ваш прогресс сохранён.",
 	
 	"daily_reminder_variant_0" : "Богатырь! Ты нужен русским землям! Поскорее возвращайся на ратную службу!",
 	"daily_reminder_variant_1" : "На карте обнаружены новые противники! Экипируйте своё лучшее оружие и сразитесь с ними!",
