@@ -16,3 +16,4 @@
 //////------- v1.2.1
 - Кнопки от предыдущих сообщений бота больше не удаляются, а просто перестают работать (сделано в целях повышения технической стабильности).
 - Исправлен редкий баг, когда бот мог отреагировать на ваше сообщение как на сообщение от другого игрока.
+- Добавлен HANDLE UPDATE TIMEOUT на случай, если повиснет обработка предыдущего сообщения от игрока.
